[minor] Comment in the image transformation

--- a/ML Basics with PyTorch/Basic Image Classification.ipynb
+++ b/ML Basics with PyTorch/Basic Image Classification.ipynb
@@ -1036,8 +1036,8 @@
     "url = 'https://st.depositphotos.com/1377864/2119/i/600/depositphotos_21194933-stock-photo-t-shirt-back-isolated-on.jpg'\n",
     "\n",
     "img = Image.open(requests.get(url, stream=True).raw)\n",
-    "img = img.resize((28, 28))\n",
-    "img = img.convert('L')\n",
+    "img = img.resize((28, 28))  # Resize to the 28x28\n",
+    "img = img.convert('L')      # Convert to grayscale\n",
     "img = np.array(img)\n",
     "img = np.expand_dims(img, 0)\n",
     "img = torch.from_numpy(img)\n",
