Adding link to the colab

--- a/ML Basics with PyTorch/Basic Image Classification.ipynb
+++ b/ML Basics with PyTorch/Basic Image Classification.ipynb
@@ -21,7 +21,9 @@
    "source": [
     "# Basic Classification: Classify Images of Clothing\n",
     "\n",
-    "This guide trains a neural network model to classify images of clothing, like sneakers and shirts. It's okay if you don't understand all the details; this is a fast-paced overview of a complete TensorFlow program with the details explained as you go."
+    "This guide trains a neural network model to classify images of clothing, like sneakers and shirts. It's okay if you don't understand all the details; this is a fast-paced overview of a complete TensorFlow program with the details explained as you go.\n",
+    "\n",
+    "[Run in Google Colab](https://colab.research.google.com/github/z-a-f/PyTorch-Tutorials/blob/main/ML%20Basics%20with%20PyTorch/Basic%20Image%20Classification.ipynb)"
    ]
   },
   {
